tests/errors/lex_char1.java
public class lex_char1 {
	char a ='asdasdsa';
}
